--- a/letter.html
+++ b/letter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ladies Learning Code Love Bomb!</title>
+  <title>Letter</title>
   <link href='https://fonts.googleapis.com/css?family=Sacramento|Lato:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="letter.css">
 
